overall updates(requests, unit tests), readme file and integration tests